--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,38 +1,47 @@
 .checkbtn{
-    display: block;
-  }
-  
-  ul{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #F0F1F5;
-    top: 70px;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
-    z-index:1;
-  }
-  
-  nav ul li{
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-  nav ul li a{
-    font-size: 35px;
-  }
-  
-.logo img{
-    width: 45%;
-    height: auto;
+  display: block;
 }
   
-  a:hover,a.current{
-    background: none;
-    color: #9c2421;
-  }
+ul{
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: #F0F1F5;
+  top: 70px;
+  left: -100%;
+  text-align: center;
+  transition: all .5s;
+  z-index:1;
+}
   
-  #check:checked ~ ul{
-    left: 0;
-  }
+nav ul li{
+  display: block;
+  margin: 50px 0;
+  line-height: 30px;
+}
+
+nav ul li a{
+  font-size: 35px;
+}
+  
+.logo img{
+  width: 45%;
+  height: auto;
+}
+  
+a:hover,a.current{
+  background: none;
+  color: #9c2421;
+}
+  
+#check:checked ~ ul{
+  left: 0;
+}
+
+
+/*Menù page*/
+#menu .box .container{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
