--- a/style.css
+++ b/style.css
@@ -170,15 +170,16 @@ a.current,a:hover{
     font-size: 40px;
 }
 
-#menu .box .container .pietanza{
+#menu .box .container-menu .pietanza{
     color: #ffffff;
     font-size: 20px;
 
 }
 
-#menu .box .container{
+#menu .box .container-menu{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 
