--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ a.current,a:hover{
     background-color: #363434;
     font-size: 20px;
     padding-top: 2rem;
+    padding-bottom: 2rem;
     width: 100%;
 }
 
