add menù background

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ a.current,a:hover{
 #menu{
     display: flex;
     justify-content: center;
-    background: #363434;
+    background: url(./img/background_menu.png);
 }
 
 #menu .box{
