--- a/style_mobile.css
+++ b/style_mobile.css
@@ -77,6 +77,16 @@ a:hover,a.current{
 }
 
 /*Menù page*/
+#max{
+  background: #F0F1F5;
+}
+
+#menu{
+  display: flex;
+  justify-content: center;
+  background: url(./img/background_menu.png);
+}
+
 #menu .box .container-menu .pietanza{
   width: 100%;
 }
