--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ a.current,a:hover{
 }
 
 #menu .box .container-menu .pietanza .color-pietanza{
-    color: #055d3a;
+    color: #157d34;
 }
 
 #menu .box .container-menu{
