--- a/style.css
+++ b/style.css
@@ -178,6 +178,11 @@ a.current,a:hover{
     width: 50%;
 }
 
+#menu .box .container-menu .pietanza b{
+    display: flex;
+    justify-content: space-between;
+}
+
 #menu .box .container-menu .pietanza .color-pietanza{
     color: #157d34;
 }
