color test menù

--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ a.current,a:hover{
 
 #menu .box .container-menu .pietanza .color-pietanza{
     color: #157d34;
+    font-weight: 800;
 }
 
 #menu .box .container-menu{
