--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ a.current,a:hover{
 #menu .box .container-menu .pietanza{
     color: #ffffff;
     font-size: 20px;
+    width: 50%;
 }
 
 #menu .box .container-menu .pietanza b{
