--- a/style_mobile.css
+++ b/style_mobile.css
@@ -10,7 +10,7 @@ ul{
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: #F0F1F5;
+  background: #1b1a17; /* ⇦ cambiato da #F0F1F5 */
   top: 70px;
   left: -100%;
   text-align: center;
@@ -26,6 +26,7 @@ nav ul li{
 
 nav ul li a{
   font-size: 35px;
+  color: #f4f1ea; /* ⇦ testo chiaro sul menu scuro */
 }
   
 .logo img{
@@ -40,51 +41,4 @@ a:hover,a.current{
   
 #check:checked ~ ul{
   left: 0;
-}
-
-/*Home*/
-#presentation {
-  height: 45vh;
-  padding: 3rem 0;
-}
-
-#presentation .container{
-  text-align: center;
-  font-size: 30px;
-  max-width: 50%;
-  border-radius: 10px;
-}
-
-#presentation .container h1{
-  text-shadow: 2px 2px #000000;
-  font-size: 45px;
-}
-
-#presentation .container p{
-  color: #9c2421;
-  font-family: "Teko", sans-serif;
-  text-shadow: 1px 1px #000000;
-  font-size: 24px;
-}
-
-#info .container{
-  display: flex;
-  flex-direction: column;
-}
-
-#maps .container iframe{
-  filter: blur(0px);
-}
-
-/*Menù page*/
-#max{
-  background: url(./img/background-menu-mobile.png);
-}
-
-#menu .box .container-menu .pietanza{
-  width: 100%;
-}
-
-#menu .box .container-menu{
-  flex-direction: column;
 }
